--- a/hw1/formProcessor.html
+++ b/hw1/formProcessor.html
@@ -16,17 +16,20 @@ th, td {
 }
 </style>
 </head>
+
 <body>
 <h1>User Information</h1>
 <table id="Account" style="width:100%">
 </table>
+</body>
+
 <script>
 function getUrlParameter() {
     var sPageURL = window.location.search.substring(1),
-        sURLVariables = sPageURL.split('&'),
+        sURLVariables = sPageURL.split("&"),
         keyValue = {},
         i;
-    var table=document.getElementById('Account');
+    var table=document.getElementById("Account");
     for (i = 0; i < sURLVariables.length; i++) {
         var row = table.insertRow(table.length);
         var cell1 = row.insertCell(0);
@@ -44,7 +47,6 @@ function getUrlParameter() {
     }
 }
 getUrlParameter();
-
 </script>
-</body>
+
 </html>
