--- a/hw1/formProcessor.html
+++ b/hw1/formProcessor.html
@@ -25,16 +25,16 @@ th, td {
 
 <script>
 function getUrlParameter() {
-    var sPageURL = window.location.search.substring(1),
-        sURLVariables = sPageURL.split("&"),
+    var urlContent = window.location.search.substring(1),
+        urlVariables = urlContent.split("&"),
         keyValue = {},
         i;
     var table=document.getElementById("Account");
-    for (i = 0; i < sURLVariables.length; i++) {
+    for (i = 0; i < urlVariables.length; i++) {
         var row = table.insertRow(table.length);
         var cell1 = row.insertCell(0);
         var cell2 = row.insertCell(1);
-        var pair = sURLVariables[i].split("=");
+        var pair = urlVariables[i].split("=");
         if(pair[0] === "timestamp"){
             cell1.innerHTML=pair[0];
             var temp = decodeURIComponent(pair[1]);
